# gantabya-django

./: .gitignore  pyproject.toml
src/gantabya/: asgi.py  settings.py  urls.py  wsgi.py
src/logistics/: admin.py  forms.py  mixins.py  models.py  urls.py  utils.py  views.py
src/logistics/migrations/: 0001_initial.py  0002_initial.py  0003_pricing_fields.py
src/templates/: header.html  login.html  register.html
src/templates/logistics/: available_loads.html  load_detail.html  load_form.html  my_bookings.html  my_loads.html
src/templates/main/: base.html  carrier_home.html  consignor_home.html  profile.html
src/user_management/: admin.py  backends.py  forms.py  manager.py  models.py  urls.py  utils.py  views.py
src/user_management/migrations/: 0001_initial.py  0002_vehicle_fields.py
